# UEngine

./: .gitignore
Assets/: DefaultTexture2D.dds  Monkey.blend  Monkey.fbx  New Asset  SphereLOD.blend  SphereLOD.blend1  asd
Resources/Icons/: Thumbs.db
Shaders/: BasePassDeferredNull.hlsl  Common.hlsl  DeferredCommon.hlsl  ImGUI.hlsl  ImGUI_VS.hlsl  ImGui_PS.hlsl  LineDraw.glsl  MaterialDefault.hlsl  Math.hlsl  PS.hlsl  PrimitiveBatch.hlsl  ScreenQuadGen.hlsl  Test.glsl  Test.hlsl  TestCompute.hlsl  TestGenerateQuadCS.hlsl  TestMesh.hlsl  TestScreenDisc.hlsl  TestScreenTrianglePS.hlsl  TestScreenTriangleVS.hlsl  VS.hlsl  hlsl.txt
Shaders/Materials/: test.hlsl
Src/: CMakeLists.txt
Src/AStarTest/: GLClasses.h  MainWindow.h  main.cpp  main2.cpp
Src/AndroidBuild/: UEngine.sln
Src/AndroidBuild/AndroidTest/AndroidTest.NativeActivity/: AndroidTest.NativeActivity.vcxproj
Src/AndroidBuild/AndroidTest/AndroidTest.Packaging/: AndroidTest.Packaging.androidproj
Src/AndroidBuild/AndroidTest/AndroidTest.Packaging/res/values/: strings.xml
Src/AndroidBuild/UCore/: UCore.vcxproj
Src/AndroidBuild/UGFXGLES2/: UGFXGLES2.vcxproj
Src/AndroidTest/: Base.h  SimpleShaderVS.glsl  android_native_app_glue.c  android_native_app_glue.h  main.cpp  pch.h
Src/Core/: All.h  Allocators.cpp  Allocators.h  Array.h  Atomic.h  Base.h  Bound.cpp  Bound.h  Buffer.cpp  Buffer.h  ByteSerializer.h  ClassUtility.cpp  ClassUtility.h  Compression.cpp  Compression.h  Config.cpp  Config.h  Core.vcxproj  CoreBase.h  Curve.h  Delegate.h  FileSys.cpp  FileSys.h  FileSys_Win.cpp  Frustum.cpp  Frustum.h  Hash.cpp  Hash.h  Int2.h  Lambtion.h  Log.cpp  Log.h  MathUtil.h  Matrix.cpp  Matrix.h  Memory.cpp  Memory.h  Meta.cpp  Meta.h  MetaArray.cpp  (+34 more)
Src/CoreTest/: CoreTest.cpp  CoreTest.vcxproj  MathTest.cpp  MetaTest.cpp  MetaTest.h  lexertk_examples.cpp
Src/DXTest/: Base.cpp  Base.h  Scene.h  main.cpp
Src/Editor/: AssetMgr.h  Base.h  DebugHelpers.cpp  Editor.vcxproj  EditorBase.cpp  EditorBase.h  MainWindow.cpp  MainWindow.h  main.cpp  test0.cpp  testStarDlg.cpp
Src/EditorBase/: AssetBrowser.cpp  AssetBrowser.h  Base.cpp  Base.h  ClassHierarchy.h  EntityBrowser.cpp  EntityBrowser.h  Filter.h  FlowLayout.h  LevelEditor.cpp  LevelEditor.h  Log.cpp  Log.h  PropertyBrowser.h
Src/EditorBaseIM/: AssetBrowser.cpp  AssetBrowser.h  ClassHierarchy.h  EditorBaseIM.cpp  EditorBaseIM.h  EntityBrowser.cpp  EntityBrowser.h  LevelEditor.h  PropertyBrowser.h  WBase.cpp  WBase.h
Src/EditorCommon/: AssetBrowser.cpp  AssetBrowser.h  AssetInterface.cpp  AssetInterface.h  AssetMgrEd.cpp  AssetMgrEd.h  AssetViewer.cpp  AssetViewer.h  ClassComboBox.cpp  ClassComboBox.h  ClassHierarchy.h  D3DWidget.cpp  D3DWidget.h  DebugAssetViewer.cpp  DebugAssetViewer.h  DebugImporter.cpp  DebugImporter.h  EditorCommonBase.cpp  EditorCommonBase.h  EditorResources.cpp  EditorResources.h  EntityBrowser.cpp  EntityBrowser.h  Filter.cpp  Filter.h  FlowLayout.cpp  FlowLayout.h  LevelEditor.cpp  LevelEditor.h  Log.cpp  Log.h  MainWindow.cpp  MainWindow.h  NewAssetBrowser.h  Project.cpp  Project.h  PropertyBrowser.cpp  PropertyBrowser.h  PropertyBrowserItems.cpp  PropertyBrowserItems.h  (+3 more)
Src/Engine/: All.h  Asset.cpp  Asset.h  Base.cpp  Base.h  Canvas.cpp  Canvas.h  CellCull.cpp  CellCull.h  Config.h  DebugAsset.cpp  DebugAsset.h  Engine.cpp  Engine.h  Entities_Reflection.cpp  Entity.cpp  Entity.h  EntityBillboard.cpp  EntityBillboard.h  EntityCamera.cpp  EntityCamera.h  EntityLight.cpp  EntityLight.h  EntityNode.cpp  EntityNode.h  EntityParticle.cpp  EntityParticle.h  EntityPrimitive.cpp  EntityPrimitive.h  EntityProjector.cpp  EntityProjector.h  EntityRoot.cpp  EntityRoot.h  EntitySceneCapture.cpp  EntitySceneCapture.h  EntityShape.cpp  EntityShape.h  EntitySkinnedMesh.cpp  EntitySkinnedMesh.h  EntityStaticMesh.cpp  (+36 more)
Src/Engine2D/: Base.h
Src/EngineBase/: Asset.h  Base.h
Src/GFXCore/: Base.cpp  Base.h  GFXCore.vcxproj  GlobalShader.cpp  GlobalShader.h  ShaderMgr.h  WrapperNull.h
Src/GFXDirectX/: Base.cpp  Base.h  Buffers.cpp  Buffers.h  CommandAllocator.h  CommandList.cpp  CommandList.h  Context.cpp  Context.h  DescriptorHeap.cpp  DescriptorHeap.h  PipelineStateMgr.cpp  PipelineStateMgr.h  RootSignature.cpp  RootSignature.h  ShaderMgr.cpp  ShaderMgr.h  Shaders.h  TextureMgr.cpp  TextureMgr.h  Wrapper.h
Src/GFXGL/: Base.cpp  Base.h
Src/GFXVulkan/: Base.h  Shaders.cpp  Shaders.h  Wrapper.h
Src/IMGUI/: imconfig.h
Src/SceneRenderer/: Base.h  SceneRenderer.h  SceneRendererDX12.cpp  SceneRendererVK.cpp
Src/ULauncherTest/: Base.h  DebugHelpers.cpp  DebugHelpers.h  GameInput.cpp  GameInput.h  ImGUIImpl.h  ImGuiImpl.cpp  Launcher.cpp  MainWindow.cpp  MainWindow.h  ShaderFileWatcher.cpp  ShaderFileWatcher.h  StaticMesh.cpp  StaticMesh.h  TestDraw.cpp  TestDraw.h  TestEntities.cpp  TestEntities.h  TestRenderer.h  TestScene.cpp  TestScene.h  WorkSpace.cpp  WorkSpace.h  WorkSpaceLevelEditor.h  main.cpp
